# sendme-app

./: .gitignore  AGENTS.md  ANDROID_DEBUG_GUIDE.md  ANDROID_FILENAME_PRESERVATION.md  ANDROID_FIX_SUMMARY.md  CLAUDE.md  Cargo.toml  DEBUG_STEPS.md  EPRINTLN_DEBUG.md  LOGGING_FIX.md  Packager.toml  README.md  debug_android.sh  index.ts  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: publish-to-auto-release.yml  release-cli.yml  release.yml
app/: README.md  package-lock.json  package.json  vite.config.ts
app/src/: App.vue  entry-client.tsx  style.css  styles.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json  mobile.json
app/src-tauri/src/: android.rs  lib.rs  main.rs
app/src/components/: NearbyDevices.vue  TicketReceiveDialog.vue
app/src/components/ui/sonner/: Sonner.vue
app/src/lib/: commands.ts
app/src/routes/: index.tsx
browser/: COMPATIBILITY.md  Cargo.toml  README.md  TESTING.md  app.config.ts  better-auth.config.ts  package.json  wrangler.jsonc
browser-lib/: Cargo.toml
browser-lib/src/: node.rs  wasm.rs
browser/public/: README.md  index.html
browser/src/: app.css  app.tsx  lib.rs  node.rs  wasm.rs
browser/src/components/auth/: AuthModal.tsx
browser/src/components/pwa/: PWAInstallPrompt.tsx  PWAUpdateNotification.tsx
browser/src/components/sendme/: ReceiveTab.tsx  SendTab.tsx
browser/src/lib/: auth-client.ts  commands.ts
browser/src/lib/db/: index.ts  schema.ts
browser/src/routes/: index.tsx  login.tsx  register.tsx
browser/src/routes/app/: index.tsx
browser/src/wasm/: pisend_browser.d.ts  pisend_browser.js  pisend_browser_bg.wasm.d.ts  sendme_browser.d.ts  sendme_browser.js
cli/: Cargo.toml
cli/src/: main.rs
cli/src/tui/: app.rs  event.rs  file_search.rs  mod.rs  ui.rs
cli/src/tui/tabs/: nearby.rs  receive.rs  send.rs  transfers.rs
lib/: Cargo.toml
lib/src/: export.rs  import.rs  lib.rs  nearby.rs  progress.rs  receive.rs  send.rs  types.rs
tauri-plugin-mobile-file-picker/: README.md  package.json
tauri-plugin-mobile-file-picker/android/src/main/java/: MobileFilePickerPlugin.kt
tauri-plugin-mobile-file-picker/guest-js/: index.ts
tauri-plugin-mobile-file-picker/ios/Sources/MobileFilePicker/: MobileFilePicker.swift
tauri-plugin-mobile-file-picker/permissions/: default.toml
tauri-plugin-mobile-file-picker/permissions/autogenerated/: reference.md
tauri-plugin-mobile-file-picker/permissions/schemas/: schema.json
tauri-plugin-mobile-file-picker/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
thoughts/shared/handoffs/general/: 2026-01-12_19-20-44_android-file-opening-jni.md
