[workspace]
members = ["lib", "cli", "app/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.31.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/n0-computer/sendme"
rust-version = "1.81"

[workspace.dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
debug = "none"
strip = true
