[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license.workspace = true
repository.workspace = true
description = "A cli tool to send directories over the network, with NAT hole punching"
readme = "../../README.md"

[[bin]]
name = "pisend"
path = "src/main.rs"

[dependencies]
pisend-lib = { path = "../lib" }

# CLI-only dependencies
anyhow.workspace = true
console = "0.15.7"
indicatif = "0.17.7"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio.workspace = true
crossterm = { version = "0.29.0", features = [
  "event-stream",
  "osc52",
], optional = true }
fast_qr = "0.12"
futures-lite = "2.6.1"

# TUI dependencies
ratatui = "0.29"
uuid = "1.11"
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.174", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_System_Console",
], optional = true }

[dev-dependencies]
duct = "0.13.6"
iroh-blobs = "0.97"
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.9.2"
serde_json = "1.0.108"
tempfile = "3.8.1"

[features]
clipboard = ["dep:crossterm", "dep:windows-sys", "dep:libc"]
default = ["clipboard"]
