[package]
name = "pisend-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license.workspace = true
repository.workspace = true
description = "Library for sending files over the network with NAT hole punching"

[dependencies]
iroh = { version = "0.95", features = ["discovery-local-network"] }
iroh-blobs = "0.97"
tokio.workspace = true
anyhow.workspace = true
futures-buffered = "0.2.11"
n0-future = "0.3"
num_cpus = "1.16.0"
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.40"
walkdir = "2.4.0"
data-encoding = "2.6.0"
hex = "0.4.3"
derive_more = { version = "2.0.1", features = ["display", "from_str"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8.1"
