[package]
name = "app"
version = "0.31.0"
edition = "2021"

[lib]
name = "sendme_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
sendme-lib = { path = "../../lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.34.0", features = ["full"] }
tauri = { version = "2", features = ["tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-sharesheet = { git = "https://github.com/rittme/tauri-plugin-sharesheet" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
