[package]
name = "app"
version = "0.31.0"
edition = "2021"

[lib]
name = "sendme_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
pisend-lib = { path = "../../lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.34.0", features = ["full"] }
tauri = { version = "2", features = ["tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-sharesheet = { git = "https://github.com/rittme/tauri-plugin-sharesheet" }
tauri-plugin-opener = "2"
anyhow = "1"
iroh-blobs.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-mobile-file-picker = { path = "../../tauri-plugin-mobile-file-picker" }
jni = "0.21"
ndk-context = "0.1"
android_logger = "0.15"
urlencoding = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
